tests/ui/form_data_unparsable.stderr
error[E0277]: the trait bound `for<'de> MyType: serde::de::Deserialize<'de>` is not satisfied
  --> tests/ui/form_data_unparsable.rs:14:20
   |
14 |     assert_formdata::<MyFormData>();
   |                       ^^^^^^^^^^ the trait `for<'de> serde::de::Deserialize<'de>` is not implemented for `MyType`
   |
   = help: the following other types implement trait `serde::de::Deserialize<'de>`:
             &'a Path
             &'a [u8]
             &'a str
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
   = note: required for `MyType` to implement `serde::de::DeserializeOwned`
   = note: required for `Value<'gotham_formdata_value, gotham_formdata::Error>` to implement `for<'gotham_formdata_value> Parse<MyType>`
note: required for `MyFormData` to implement `FormData`
  --> tests/ui/form_data_unparsable.rs:6:10
   |
6  | #[derive(FormData, Validate)]
   |          ^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
7  | struct MyFormData {
   |        ^^^^^^^^^^
note: required by a bound in `assert_formdata`
  --> tests/ui/form_data_unparsable.rs:11:23
   |
11 | fn assert_formdata<T: FormData>() {}
   |                       ^^^^^^^^ required by this bound in `assert_formdata`
   = note: this error originates in the derive macro `FormData` (in Nightly builds, run with -Z macro-backtrace for more info)
